// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSlider Snapshots shows disabled 1`] = `
<label
  className="sc-bdVaJa kSRYIC"
  disabled={true}
>
  <input
    checked={false}
    className="pb-test__toggle-slider sc-bwzfXH eKeXgs"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-htpNat hnrsOU"
    disabled={true}
  />
</label>
`;

exports[`ToggleSlider Snapshots shows toggled off 1`] = `
<label
  className="sc-bdVaJa cMcrxJ"
  disabled={false}
>
  <input
    checked={false}
    className="pb-test__toggle-slider sc-bwzfXH eKeXgs"
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-htpNat dwgooG"
    disabled={false}
  />
</label>
`;

exports[`ToggleSlider Snapshots shows toggled on 1`] = `
<label
  className="sc-bdVaJa cMcrxJ"
  disabled={false}
>
  <input
    checked={true}
    className="pb-test__toggle-slider sc-bwzfXH eKeXgs"
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="sc-htpNat dFyors"
    disabled={false}
  />
</label>
`;
